02 Befire create reviews

--- a/config.env
+++ b/config.env
@@ -5,3 +5,10 @@ DATABASE_PASSWORD=nofidZvUs6fGGU6I
 
 JWT_SECRET=The-secter-key-JWTToken-Oleg-32l
 JWT_EXPIRES_IN=90d
+
+JWT_COOKIE_EXPIRES_IN=90
+
+EMAIL_USERNAME=a5f577246dc23a
+EMAIL_PASSWORD=58efc3d6912817
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
