--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "express": "^4.19.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.2.0",
-    "helmet": "^7.1.0",
+    "helmet": "^3.23.3",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
+    "mapbox-gl": "^3.4.0",
     "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.13",
